feat: adiciona dark theme

--- a/style.css
+++ b/style.css
@@ -5,15 +5,29 @@
     box-sizing: border-box;
 }
 
+:root {
+    --body-color: #efefef;
+    --nav-color: #1876f2;
+    --bg-color: #fff;
+}
+
+.dark-theme {
+    --body-color: #0a0a0a;
+    --nav-color: #000;
+    --bg-color: #000;
+}
+
+
 body {
-    background-color: #efefef;
+    background: var(--body-color);
+    transition: background-color 0.5s;
 }
 
 nav {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background-color: #1876f2;
+    background-color: var(--nav-color);
     padding: 10px 20px;
     position: sticky;
     top: 0;
@@ -108,7 +122,7 @@ nav {
     position: sticky;
     top: 70px;
     align-self: flex-start;
-    background-color: #fff;
+    background-color: var(--bg-color);
     padding: 20px;
     border-radius: 4px;
     color: #626262;
@@ -276,7 +290,7 @@ nav {
 }
 
 .story1 {
-    background-image: linear-gradient(transparent, rgba(0,0,0,0.5)), url('images/status-1.png');
+    background-image: linear-gradient(transparent, rgba(0,0,0,0.5)), url('http://github.com/osdeving.png');
 }
 
 .story2 {
@@ -295,7 +309,7 @@ nav {
     background-image: linear-gradient(transparent, rgba(0,0,0,0.5)), url('images/status-5.png');
 }
 
-.story .story1 img {
+.story1 img {
     top: unset;
     left: 50%;
     bottom: 40px;
@@ -306,7 +320,7 @@ nav {
 
 .write-post-container {
     width: 100%;
-    background-color: #fff;
+    background-color:  var(--bg-color);
     border-radius: 6px;
     padding: 20px;
     color: #626262;
@@ -370,7 +384,7 @@ nav {
 
 .post-container {
     width: 100%;
-    background: #fff;
+    background:  var(--bg-color);
     border-radius: 6px;
     padding: 20px;
     color: #626262;
@@ -464,12 +478,18 @@ nav {
     position: absolute;
     width: 90%;
     max-width: 350px;
-    background: #fff;
+    background: var(--bg-color);
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
     border-radius: 4px;
     overflow: hidden;
     top: 108%;
     right: 5%;
+    max-height: 0;
+    transition: max-height 0.3s;
+}
+
+.settings-menu-height {
+    max-height: 500px;
 }
 
 .user-profile a {
@@ -509,4 +529,30 @@ nav {
     justify-content: space-between;
     text-decoration: none;
     color: #626262;
+}
+
+#dark-btn {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    background: #ccc;
+    width: 45px;
+    border-radius: 15px;
+    padding: 2px 3px;
+    cursor: pointer;
+    display: flex;
+    transition: padding-left 0.5s, background-color 0.5s;
+}
+
+#dark-btn span {
+    display: inline-block;
+    width: 18px;
+    height: 18px;
+    background: #fff;
+    border-radius: 50%;
+}
+
+#dark-btn.dark-btn-on {
+    padding-left: 23px;
+    background: black;
 }
